02_applications/auth/authentik_ldap_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-outpost-ldap
  namespace: auth
  labels:
    app.kubernetes.io/name: "authentik"
    app.kubernetes.io/instance: "authentik"
    app.kubernetes.io/component: "outpost-ldap"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: "authentik"
      app.kubernetes.io/instance: "authentik"
      app.kubernetes.io/component: "outpost-ldap"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "authentik"
        app.kubernetes.io/instance: "authentik"
        app.kubernetes.io/component: "outpost-ldap"
    spec:
      containers:
        - name: ldap
          image: registry.lab.reisman.org/proxy.ghcr.io/goauthentik/ldap:2024.6.4
          ports:
            - name: ldap
              containerPort: 3389
              protocol: TCP
            - name: ldaps
              containerPort: 6636
              protocol: TCP
            - name: metrics
              containerPort: 9300
              protocol: TCP
            - name: debug
              containerPort: 9900
              protocol: TCP
