02_applications/auth/authentik_worker_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-worker
  namespace: auth
  labels:
    app.kubernetes.io/name: "authentik"
    app.kubernetes.io/instance: "authentik"
    app.kubernetes.io/component: "worker"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "authentik"
      app.kubernetes.io/instance: "authentik"
      app.kubernetes.io/component: "worker"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "authentik"
        app.kubernetes.io/instance: "authentik"
        app.kubernetes.io/component: "worker"
    spec:
      serviceAccountName: authentik
      terminationGracePeriodSeconds: 30
      containers:
        - name: worker
          image: registry.lab.reisman.org/proxy.ghcr.io/goauthentik/server:2024.4.2
          imagePullPolicy: IfNotPresent
          args:
            - worker
          volumeMounts:
            - name: blueprints
              mountPath: /blueprints/custom
            - name: certificate
              mountPath: /certs/auth.${vals_info_cluster_domain}
      volumes:
        - name: certificate
          secret:
            secretName: authentik-server-tls
        - name: blueprints
          projected:
            sources:
              - secret:
                  name: authentik-blueprint-dovecot
              - secret:
                  name: authentik-blueprint-immich
              - secret:
                  name: authentik-blueprint-ldap
              - secret:
                  name: authentik-blueprint-owncloud
              - secret:
                  name: authentik-blueprint-paperless
